force-app/main/default/objects/Outreach_Engine_Settings__mdt/Outreach_Engine_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Engine Setting</label>
    <pluralLabel>Outreach Engine Settings</pluralLabel>
    <description>Global defaults for the Patient Outreach rule engine (cadence template, attempt interval).</description>
</CustomObject>