force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Default_Attempt_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Attempt_Interval_Days__c</fullName>
    <label>Default Attempt Interval Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>