force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Default_Cadence_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Cadence_Template__c</fullName>
    <label>Default Cadence Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>