force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Default_Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Default_Max_Attempts__c</fullName>
    <label>Default Max Attempts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>