force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Default_Pause_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Pause_Duration_Days__c</fullName>
    <label>Default Pause Duration Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>