force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Default_Reopen_Window_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_Reopen_Window_Hours__c</fullName>
    <label>Default Reopen Window Hours</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>