force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Engagement_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Range_Max__c</fullName>
    <description>Inclusive max for RANGE strategy.</description>
    <label>Engagement Range Max</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>