force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Engagement_Weight__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Weight__c</fullName>
    <description>Points-equivalent weight for engagement in Routing_Priority blend (0-9999).</description>
    <label>Engagement Weight</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>