force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Pressure_Block_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Block_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, patients at/above Pressure Block Threshold are held out of Unclaimed unless a care-item rule has Bypass Pressure Gate.</description>
    <label>Pressure Block Enabled</label>
    <type>Checkbox</type>
</CustomField>