force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Pressure_Block_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Block_Threshold__c</fullName>
    <description>Account Pressure_Score at/above this value blocks the queue unless Bypass Pressure Gate.</description>
    <label>Pressure Block Threshold</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>