force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Random_Salt_Hours__c.field-meta.xml
<CustomField>
    <fullName>Random_Salt_Hours__c</fullName>
    <description>RANDOM strategy reshuffle period in hours (default 24).</description>
    <label>Random Salt Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>