force-app/main/default/objects/Outreach_Engine_Settings__mdt/fields/Ranking_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Ranking_Strategy__c</fullName>
    <description>HIGH | LOW | RANGE | RANDOM | NEUTRAL — how Account Engagement_Score affects Routing_Priority.</description>
    <label>Ranking Strategy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>